Testing operation in tools menu