@@ -228,7 +228,7 @@ public class TextFontOptionsPanel extends javax.swing.JPanel implements OptionsP
         }
         value = preferences.get(PREFERENCES_TEXT_FONT_SIZE, null);
         if (value != null) {
-            attribs.put(TextAttribute.SIZE, new Integer(value).floatValue());
+            attribs.put(TextAttribute.SIZE, Integer.valueOf(value).floatValue());
         }
         if (Boolean.valueOf(preferences.get(PREFERENCES_TEXT_FONT_UNDERLINE, null))) {
             attribs.put(TextAttribute.UNDERLINE, TextAttribute.UNDERLINE_LOW_ONE_PIXEL);
